apps/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searxng
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  strategy: {}
  template:
    metadata:
      labels:
        app: searxng
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 977
        runAsGroup: 977
        fsGroup: 977
      containers:
        - image: searxng/searxng
          name: searxng
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: etc-searxng
              mountPath: /etc/searxng
            - name: certs
              mountPath: /etc/ssl/certs
      volumes:
        - name: tmp
          emptyDir: {}
        - name: etc-searxng
          emptyDir: {}
        - name: certs
          emptyDir: {}

status: {}
