apps/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: searxng.skibidi12.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: searxng-service
            port:
              number: 80
